<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".Activity_Main">
    <item android:id="@+id/race_mode"
        android:title="@string/button_racing"
        android:orderInCategory="100"
        android:visible="true"
        app:showAsAction="never" />
    <item android:id="@+id/timer_mode"
        android:title="@string/button_timer"
        android:orderInCategory="100"
        android:visible="true"
        app:showAsAction="never" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:visible="true"
        app:showAsAction="never" />
    <item android:id="@+id/sqlite_sync"
        android:title="@string/sqlite_sync"
        android:orderInCategory="100"
        android:visible="true"
        app:showAsAction="never" />
    <item android:id="@+id/sqlite_reset"
        android:title="@string/sqlite_reset"
        android:orderInCategory="100"
        android:visible="true"
        app:showAsAction="never" />
    <item android:id="@+id/sqlite_show_data"
        android:title="@string/sqlite_show_data"
        android:orderInCategory="100"
        android:visible="true"
        app:showAsAction="never" />
    <item android:id="@+id/connect_sailtimer_anemometer"
          android:title="Connect SailTimer Anemometer"
          android:orderInCategory="100"
          android:visible="true"
          app:showAsAction="never" />
    <item android:id="@+id/about"
        android:title="@string/about"
        android:orderInCategory="100"
        android:visible="true"
        app:showAsAction="never" />
    <item android:id="@+id/quit"
          android:title="@string/quit"
          android:orderInCategory="100"
          android:visible="true"
          app:showAsAction="never" />
</menu>
